--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 
         <!-- Search Result -->
         <section>
+            <div id="loading-spinner" class="text-center my-40 hidden">
+                <span class="loading loading-spinner loading-lg text-primary"></span>
+            </div>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                
+            </div>
+            <!-- Show all button -->
+            <div id="show-all-container" class=" mt-10 hidden">
+                <button class="btn btn-accent">Show All</button>
             </div>
         </section>
     </main>
