--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
         <!-- Search Result -->
         <section>
+
+            <!-- Spinner or loader -->
             <div id="loading-spinner" class="text-center my-40 hidden">
                 <span class="loading loading-spinner loading-lg text-primary"></span>
             </div>
@@ -30,8 +32,8 @@
                
             </div>
             <!-- Show all button -->
-            <div id="show-all-container" class=" mt-10 hidden">
-                <button class="btn btn-accent">Show All</button>
+            <div id="show-all-container" class="text-center mt-10 hidden">
+                <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
             </div>
         </section>
     </main>
