--- a/index.html
+++ b/index.html
@@ -29,13 +29,32 @@
                 <span class="loading loading-spinner loading-lg text-primary"></span>
             </div>
             <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-               
+
             </div>
             <!-- Show all button -->
             <div id="show-all-container" class="text-center mt-10 hidden">
                 <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
             </div>
         </section>
+
+        <!-- Show details modal -->
+
+        <!-- Open the modal using ID.showModal() method -->
+
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <form method="dialog" class="modal-box">
+                <h3 id="show-details-phone-name" class="font-bold text-3xl"></h3>
+                <div id="show-details-container">
+
+                </div>
+
+                <div class="modal-action">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Close</button>
+                </div>
+            </form>
+        </dialog>
+
     </main>
     <footer>
 
